--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-DATABASE_URL=mongodb+srv://yoyep65045:8o5HUDPZMAyCT3xD@cluster0.h1cr8.mongodb.net/test
+DATABASE_URL=mongodb+srv://charifakhalil001:W6kBYCBnZ5qjAeju@cluster0.pgd323o.mongodb.net/test
  
 
  
