--- a/package.json
+++ b/package.json
@@ -9,12 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@next/third-parties": "^15.2.4",
+    "axios": "^1.8.4",
+    "i": "^0.3.7",
+    "mongodb": "^6.15.0",
+    "next": "14.2.24",
+    "npm": "^11.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.24"
+    "react-rating-stars-component": "^2.2.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.30.3",
+    "resend": "^4.2.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
+    "@types/node": "22.13.14",
+    "@types/react": "19.0.12",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.8.2"
   }
 }
