--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/third-parties": "^15.2.4",
     "axios": "^1.8.4",
     "i": "^0.3.7",
+    "lucide-react": "^0.486.0",
     "mongodb": "^6.15.0",
     "next": "14.2.24",
     "npm": "^11.2.0",
